# TemplateFolders

./: README.md  config.json  template-launcher-external.bat
docs/: TemplateCreation.md
src/: main.py
templates/code/Project/Project/: launch_app_venv.bat
templates/comfynode/: .tracking  README.md  __init__.py  pyproject.toml
templates/comfynode/nodes/: __init__.py
templates/comfynode/utils/: image_utils.py
templates/mcp/docs/: GEMINI.md
